<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:background="@drawable/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="63dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        style="@style/Raleway32Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:text="@string/hello"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@id/appCompatTextView"
        style="@style/Poppins16regular"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionHomefragment"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@id/appCompatTextView3"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        android:layout_marginTop="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/appCompatTextView"
        tools:layout_editor_absoluteX="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            style="@style/Poppins16regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            style="@style/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/xyz_gmail_com"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondInputBlock"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            style="@style/Poppins16regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            style="@style/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/dots"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:button="@drawable/eye"
            android:layout_marginRight="14dp"
            app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView6"
        style="@style/Poppins12regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/secondInputBlock"
        app:layout_constraintTop_toBottomOf="@id/secondInputBlock" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/blueButton"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/button_blue"
        android:text="@string/aingIn"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="47dp"
        app:layout_constraintLeft_toLeftOf="@id/button"
        app:layout_constraintRight_toRightOf="@id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Raleway16Medium"
            android:textColor="@color/customBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/homeFogotPassword1"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Raleway16Medium"
            android:textColor="@color/darkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeForgotPassword1"/>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>