<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.SecondOnboardingFragment"
    android:background="@drawable/background_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:src="@drawable/group_1000000816"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1.35dp"
            android:layout_marginTop="-17dp"
            android:src="@drawable/misc_04"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/highlight_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/appCompatImageView"
            app:layout_constraintTop_toTopOf="@id/appCompatImageView"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/startAdventure"
            style="@style/Raleway34Bold"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48.3dp"
            android:text="@string/startAdventure"
            android:textColor="@color/customWhite"
            app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            style="@style/Poppins16regular"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/descriptionOnboarding2"
            android:textColor="@color/customWhite"
            app:layout_constraintEnd_toEndOf="@+id/startAdventure"
            app:layout_constraintStart_toStartOf="@+id/startAdventure"
            app:layout_constraintTop_toBottomOf="@+id/startAdventure" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_1000000730"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintLeft_toLeftOf="@id/description"
            app:layout_constraintRight_toRightOf="@id/description"
            android:layout_marginTop="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonWhite"
            android:text="@string/next"
            android:background="@drawable/button_white"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="84dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>